compiler/testData/diagnostics/testsWithStdLib/contracts/dsl/errors/nestedConditionalEffects.kt
// !LANGUAGE: +ContractEffects

import kotlin.internal.contracts.*

fun foo(boolean: Boolean) {
    contract {
        (returns() implies (boolean)) <!UNRESOLVED_REFERENCE!>implies<!> (!boolean)
    }
}